--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
