--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
     "popper": "^1.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
